--- a/config/rubocop/.rubocop_enabled.yml
+++ b/config/rubocop/.rubocop_enabled.yml
@@ -4,8 +4,8 @@
 Style/StringLiterals:
   EnforcedStyle: single_quotes
 
-Style/MultilineMethodCallBraceLayout:
-  EnforcedStyle: symmetrical
+# Style/MultilineMethodCallBraceLayout:
+#   EnforcedStyle: symmetrical
 
 Style/VariableNumber:
   EnforcedStyle: normalcase
